--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,9 @@ body {
 .menu-link {
 	width: 100%;
 	height: 100%;
-	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .menu-icon {
