--- a/03 - A menu button/styles.css
+++ b/03 - A menu button/styles.css
@@ -33,6 +33,10 @@ body {
   z-index: 1000;
 }
 
+.menu:hover .menu-circle {
+  transform: scale(1.4);
+}
+
 .menu-link {
 	width: 100%;
 	height: 100%;
