--- a/07 - Expand effect/styles.css
+++ b/07 - Expand effect/styles.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #ff685d;
-  font-family: Helvetica Neue, arial, sans-serif;
+  font-family: Helvetica Neue, Arial, sans-serif;
   color: #fff;
   overflow: hidden;
 }
@@ -21,10 +21,10 @@ body {
 }
 
 .menu-link {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	z-index: 1002;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1002;
 }
 
 .menu-icon {
@@ -36,6 +36,39 @@ body {
   top: 0;
   right: 0;
   bottom: 1px;
+}
+
+.menu-circle {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(1);
+  z-index: 1000;
+  transition: all 0.2s ease-in-out;
+}
+
+.menu-overlay {
+  background-color: #fff;
+  color: #333;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 1001;
+  opacity: 0;
+  visibility: hidden:;
+}
+
+.menu-overlay a {
+  color: #333;
+  font-weight: 600;
+  font-size: 32px;
+  padding: 2%;
+  margin:  25% 1% 0;
+  display: inline-block;
 }
 
 .menu-line {
@@ -57,24 +90,13 @@ body {
 
 .menu-line-3 { bottom: 0; }
 
-.menu-overlay {
-  background-color: #fff;
-  color: #333;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  text-align: center;
-  transition: opacity 0.2s ease-in-out;
-  z-index: 1001;
-  opacity: 0;
-  visibility: hidden;
+.menu:hover .menu-circle { transform: scale(1.4); }
+
+.menu-overlay.open {
+  opacity: 1;
+  visibility: visible;
 }
 
-.menu-overlay a {
-  color: #333;
-  font-weight: 600;
-  font-size: 32px;
-  padding: 2%;
-  margin:  25% 1% 0;
-  display: inline-block;
+.menu.open .menu-circle { 
+  transform: scale(60);
 }
